# learn-haskell

./: .lazy.lua  learn-haskell.cabal  mise.toml
src/: Buffer.hs  Calc.hs  CreditCardNumber.hs  Editor.hs  Employee.hs  Fibonacci.hs  Golf.hs  Hanoi.hs  Homework4.hs  JoinList.hs  LogAnalysis.hs  Party.hs  PartyMain.hs  Scrabble.hs  ScrabbleBufEditor.hs  ScrabbleBuffer.hs  Sized.hs  StringBufEditor.hs  StringBuffer.hs  Typeclassopedia.hs
test/: Spec.hs
