cabal-version:       2.2

name:                learn-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/doitian/learn-haskell#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              ian
maintainer:          https://u.iany.me/gpg
copyright:           2026 ian
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable scrabble-editor
  hs-source-dirs:      src
  main-is:             ScrabbleBufEditor.hs
  other-modules:       Buffer
                     , Editor
                     , JoinList
                     , Scrabble
                     , ScrabbleBuffer
                     , Sized
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable string-editor
  hs-source-dirs:      src
  main-is:             StringBufEditor.hs
  other-modules:       Buffer
                     , Editor
                     , StringBuffer
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , doctest >= 0.16
                     , containers
  ghc-options:         -threaded

source-repository head
  type:     git
  location: https://github.com/doitian/learn-haskell
